Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 11 (2014-04-05) [stable]

** New features:

  - Built-in matchers compare nested tables and objects in about 25% of
    the time required previously, and is optimised for tail-call
    elimination for non-tree like structures.

  - Specl now loads a 'spec_helper.lua' from the same directory as the
    spec file being executed into the example environment automatically,
    so there's no need to manually require it from a `before:` block in
    each spec file any more.

  - You can easily run Specl from the top of your source tree without
    any special LUA_PATH munging in Makefiles or wrapper scripts. Just
    set `package.path` and `package.cpath` to find the code being specced
    out in a 'spec_helper.lua' in each directory containing spec files.

  - When invoked with no filename arguments, `specl` will check all your
    specifications, as long as they have names ending in `_spec.yaml` and
    are kept in or somewhere below the `specs/` directory of your project.

  - The report and progress formatters now display file:line:expectation:
    annotations for failed and pending expectations in verbose mode (-v).

  - New command line option `--fail-fast` (or `-1`) to stop checking
    expectations immediately on the first failure, rather than
    continuing and showing all failures.

  - New command line option `--example=PATTERN` (or `-e PATTERN`) to specify
    inclusive filters matched against the fully concatenated YAML
    descriptions of an example. Use this to select a subset of examples to
    (re)check.

  - You can also filter out all but the examples at a specified line
    number either by pasting from the output of a failed or pending
    expectation in verbose mode, by invoking specl as:

        specl specs/some_spec.yaml:44:1

    or with as many `+NN` as necessary to select several examples from
    the following file:
